--- a/GSE50081.Rmd
+++ b/GSE50081.Rmd
@@ -34,6 +34,7 @@ GSE50081.raw = read.celfiles(celfiles)
 
 # normalization 
 GSE50081.rma = rma(GSE50081.raw)
+GSE50081.rma = as.data.frame(exprs(GSE50081.rma))
 
 write.csv(GSE50081.rma, 
           "GSE50081rma.csv",
@@ -48,6 +49,37 @@ write.csv(GSE50081.expr,
           "GSE50081expr.csv",
           row.names = F)
 
+```
+
+```{r}
+# Remove probes without a gene symbol
+annotation50081 <- annotation50081[!is.na(annotation50081$SYMBOL) & annotation50081$SYMBOL != "", ]
+
+# Keep only probes that have a mapped gene symbol
+GSE50081.rma <- GSE50081.rma[rownames(GSE50081.rma) %in% annotation50081$PROBEID, ]
+
+# Create a column with gene symbols
+GSE50081.rma$Symbol <- annotation50081$SYMBOL[match(rownames(GSE50081.rma), annotation50081$PROBEID)]
+
+# Convert to a data frame
+GSE50081.rma <- as.data.frame(GSE50081.rma)
+
+# Group by gene symbol and compute the median expression across all samples
+GSE50081.rma <- GSE50081.rma %>%
+  group_by(Symbol) %>%
+  summarise_all(median) %>%
+  ungroup()  # Ensure row names don't reset
+
+# Explicitly set gene symbols as row names
+GSE50081.rma <- as.data.frame(GSE50081.rma)  # Convert back to a data frame
+rownames(GSE50081.rma) <- GSE50081.rma$Symbol  # Set row names
+GSE50081.rma <- GSE50081.rma[, -1]  # Remove the "Symbol" column
+
+# Check for duplicates
+any(duplicated(rownames(GSE50081.rma)))  # Should return FALSE
+
+# Transpose for final expression matrix
+GSE50081.expr <- as.data.frame(t(GSE50081.rma))
 ```
 
 # map probe IDs to gene symbols
@@ -77,12 +109,12 @@ GSE50081.data = GSE50081.data[, c(1, 3, 7, 8, 9, 10, 11)]
 
 colnames(GSE50081.data) = c("Age", "Histology", "Sex", "Smoked?", "Stage", "OS_STATUS", "OS_MONTHS")
 
-GSE50081.data$OS_MONTHS = GSE50081.data$OS_MONTHS*12
+
 GSE50081.data$OS_STATUS <- ifelse(GSE50081.data$OS_STATUS == "dead", 1, 0)
 GSE50081.data$`Smoked?` <- ifelse(GSE50081.data$`Smoked?` %in% c("Current", "Ex-smoker"), 1,
                                   ifelse(GSE50081.data$`Smoked?` == "Never", 0, NA))
 GSE50081.data$Age = as.numeric(GSE50081.data$Age)
-GSE50081.data$Sex <- ifelse(GSE50081.data$Sex == "M", "Male", "Female")
+GSE50081.data$Sex <- ifelse(GSE50081.data$Sex == "M", 1, 0)
 GSE50081.data$Histology[GSE50081.data$Histology == "adenosquamous carcinoma"] <- "Adenosquamous Carcinoma"
 GSE50081.data$Histology[GSE50081.data$Histology == "adenocarcinoma"] <- "Adenocarcinoma"
 GSE50081.data$Histology[GSE50081.data$Histology == "squamous cell carcinoma"] <- "Squamous Cell Carcinoma"
@@ -95,6 +127,7 @@ GSE50081.data$Stage[GSE50081.data$Stage == "1B"  ] <- "IB"
 GSE50081.data$Stage[GSE50081.data$Stage == "2A"  ] <- "IIA"
 GSE50081.data$Stage[GSE50081.data$Stage == "2B"  ] <- "IIB"
 GSE50081.data$OS_MONTHS = as.numeric(GSE50081.data$OS_MONTHS)
+GSE50081.data$OS_MONTHS = GSE50081.data$OS_MONTHS*12
 GSE50081.data$"Adjuvant Chemo" = 0
 GSE50081.data$Race = "Unknown"
 
@@ -104,6 +137,17 @@ GSE50081.symbol =
   feature.dat[, c("ID", "Gene Symbol", "Gene Title")]
 
 ```
+
+```{r}
+batch = as_tibble(gset@phenoData@data)
+colnames(batch)
+table(batch$source_name_ch1)
+table(batch$extract_protocol_ch1)
+table(batch$scan_protocol)
+table(batch$platform_id)
+
+```
+
 
 ```{r}
 write.csv(feature.df, 
@@ -124,7 +168,6 @@ GSE50081.merged = cbind(GSE50081.data, GSE50081.expr)
 write.csv(GSE50081.merged, 
           "GSE50081merged.csv")
 
-GSE50081data.expr = GSE50081.merged[, 1:7]
 ```
 
 ```{r}
@@ -158,4 +201,16 @@ duplicate_genes50081 <- duplicate_genes50081[order(duplicate_genes50081$SYMBOL),
 
 print(duplicate_genes50081)
 ```
+
+```{r}
+probe_to_symbol <- annotation50081[, c("PROBEID", "SYMBOL")]
+
+# Match probe IDs in GSE29013.expr with their corresponding gene symbols
+mapped_symbols <- probe_to_symbol$SYMBOL[match(colnames(GSE50081.expr), probe_to_symbol$PROBEID)]
+
+# Replace rownames of GSE29013.expr with gene symbols
+colnames(GSE50081.expr)<- mapped_symbols
+```
+
+
 
