--- a/Affymetrix RSF.Rmd
+++ b/Affymetrix RSF.Rmd
@@ -16,6 +16,10 @@ library(readr)
 
 set.seed(42)
 
+# Load train and validation datasets
+affyTrain <- read_csv("affyTrain.csv")
+affyValidation <- read_csv("affyValidation.csv")
+
 x_train <- affyTrain[, !(names(affyTrain) %in% c("OS_MONTHS", "OS_STATUS"))]
 y_train <- Surv(affyTrain$OS_MONTHS, affyTrain$OS_STATUS)
 
@@ -26,11 +30,13 @@ rsf_model <- ranger(
   y = y_train,
   num.trees = 750,
   mtry = floor(0.1 * ncol(x_train)),  # max features = 0.1
-  min.node.size = 60,                # min samples per leaf
+  min.node.size = 6,                  # minimum samples to split (min_samples_split)
+  min.bucket = 60,                    # minimum terminal node size (min_samples_leaf)
   max.depth = 10,                    # max depth
   splitrule = "logrank",
   importance = "permutation",
-  seed = 42
+  seed = 42,
+  num.threads = 0  # use all available cores
 )
 
 # Validation set prep
@@ -50,6 +56,9 @@ valid_cindex <- concordance(y_valid ~ valid_risk_scores)$concordance
 
 cat("Training C-index:", train_cindex, "\n")
 cat("Validation C-index:", valid_cindex, "\n")
+
+# Training C-index: 0.8458425 
+# Validation C-index: 0.6672072 
 
 ```
 
