updated files and data

--- a/GSE14814.Rmd
+++ b/GSE14814.Rmd
@@ -113,17 +113,23 @@ GSE14814.data = GSE14814.data[, c(1, 7, 8, 9, 10, 12, 13)]
 
 colnames(GSE14814.data) = c("Age", "Histology", "OS_STATUS", "OS_MONTHS", "Adjuvant Chemo", "Sex", "Stage")
 
+unique(GSE14814.data$Stage)
+GSE14814.data$OS_MONTHS = as.numeric(GSE14814.data$OS_MONTHS)
 GSE14814.data$OS_MONTHS = GSE14814.data$OS_MONTHS*12
 GSE14814.data$Age = as.numeric(GSE14814.data$Age)
-GSE14814.data$OS_MONTHS = as.numeric(GSE14814.data$OS_MONTHS)
 GSE14814.data$OS_STATUS <- ifelse(GSE14814.data$OS_STATUS == "Dead", 1, 0)
 GSE14814.data$`Adjuvant Chemo` <- ifelse(GSE14814.data$`Adjuvant Chemo` == "ACT", 1, 0)
 GSE14814.data$Histology[GSE14814.data$Histology == "ADC"] <- "Adenocarcinoma"
 GSE14814.data$Histology[GSE14814.data$Histology == "SQCC"] <- "Squamous Cell Carcinoma"
-GSE14814.data$Histology[GSE14814.data$Histology == "LCUC"] <- "Large Cell Undifferentiated Carcinoma"
-GSE14814.data$"Smoked?" = NA
+GSE14814.data$Histology[GSE14814.data$Histology == "LCUC"] <- "Large Cell Carcinoma"
+GSE14814.data$"Smoked?" = "Unknown"
 GSE14814.data$Race = "Unknown"
-GSE14814.data$Sex = ifelse(GSE14814.data$Sex == "Male", 1, 0)
+GSE14814.data$IS_MALE = ifelse(GSE14814.data$Sex == "Male", 1, 0)
+GSE14814.data$Sex = NULL
+GSE14814.data$Stage[GSE14814.data$Stage == "I"  ] <- "IA"
+GSE14814.data$Stage[GSE14814.data$Stage == "1B"  ] <- "IB"
+GSE14814.data$Stage[GSE14814.data$Stage == "2A"  ] <- "II"
+GSE14814.data$Stage[GSE14814.data$Stage == "2B"  ] <- "II"
 
 # fetch feature data to get gene symbols
 feature.dat = gse$GSE14814_series_matrix.txt.gz@featureData@data 
@@ -142,7 +148,7 @@ GSE14814.merged = cbind(GSE14814.data, GSE14814.expr)
 write.csv(GSE14814.merged, 
           "GSE14814merged.csv")
 
-GSE14814data.expr = GSE14814.merged[, 1:7]
+GSE14814.data = GSE14814.merged[, 1:9]
 ```
 
 ```{r}
