--- a/GSE50081.Rmd
+++ b/GSE50081.Rmd
@@ -108,28 +108,29 @@ GSE50081.data = as_tibble(gset@phenoData@data) %>%
 GSE50081.data = GSE50081.data[, c(1, 3, 7, 8, 9, 10, 11)]
 
 colnames(GSE50081.data) = c("Age", "Histology", "Sex", "Smoked?", "Stage", "OS_STATUS", "OS_MONTHS")
-
+unique(GSE50081.data$Stage)
 
 GSE50081.data$OS_STATUS <- ifelse(GSE50081.data$OS_STATUS == "dead", 1, 0)
-GSE50081.data$`Smoked?` <- ifelse(GSE50081.data$`Smoked?` %in% c("Current", "Ex-smoker"), 1,
-                                  ifelse(GSE50081.data$`Smoked?` == "Never", 0, NA))
+GSE50081.data$`Smoked?` <- ifelse(GSE50081.data$`Smoked?` %in% c("Current", "Ex-smoker"), "Yes",
+                                  ifelse(GSE50081.data$`Smoked?` == "Never", "No", "Unknown"))
 GSE50081.data$Age = as.numeric(GSE50081.data$Age)
-GSE50081.data$Sex <- ifelse(GSE50081.data$Sex == "M", 1, 0)
+GSE50081.data$IS_MALE <- ifelse(GSE50081.data$Sex == "M", 1, 0)
 GSE50081.data$Histology[GSE50081.data$Histology == "adenosquamous carcinoma"] <- "Adenosquamous Carcinoma"
 GSE50081.data$Histology[GSE50081.data$Histology == "adenocarcinoma"] <- "Adenocarcinoma"
 GSE50081.data$Histology[GSE50081.data$Histology == "squamous cell carcinoma"] <- "Squamous Cell Carcinoma"
 GSE50081.data$Histology[GSE50081.data$Histology == "large cell carcinoma"] <- "Large Cell Carcinoma"
-GSE50081.data$Histology[GSE50081.data$Histology == "NSClarge cell carcinoma-mixed"] <- "NSClarge Cell Carcinoma-Mixed"
-GSE50081.data$Histology[GSE50081.data$Histology == "NSCLC-favor adenocarcinoma" ] <- "NSCLC-Favor Adenocarcinoma" 
-GSE50081.data$Histology[GSE50081.data$Histology == "squamous cell carcinoma X2"  ] <- "Squamous cell Carcinoma X2" 
+GSE50081.data$Histology[GSE50081.data$Histology == "NSClarge cell carcinoma-mixed"] <- "Large Cell Carcinoma"
+GSE50081.data$Histology[GSE50081.data$Histology == "NSCLC-favor adenocarcinoma" ] <- "Adenocarcinoma" 
+GSE50081.data$Histology[GSE50081.data$Histology == "squamous cell carcinoma X2"  ] <- "Squamous cell Carcinoma" 
 GSE50081.data$Stage[GSE50081.data$Stage == "1A"  ] <- "IA"
 GSE50081.data$Stage[GSE50081.data$Stage == "1B"  ] <- "IB"
-GSE50081.data$Stage[GSE50081.data$Stage == "2A"  ] <- "IIA"
-GSE50081.data$Stage[GSE50081.data$Stage == "2B"  ] <- "IIB"
+GSE50081.data$Stage[GSE50081.data$Stage == "2A"  ] <- "II"
+GSE50081.data$Stage[GSE50081.data$Stage == "2B"  ] <- "II"
 GSE50081.data$OS_MONTHS = as.numeric(GSE50081.data$OS_MONTHS)
 GSE50081.data$OS_MONTHS = GSE50081.data$OS_MONTHS*12
 GSE50081.data$"Adjuvant Chemo" = 0
 GSE50081.data$Race = "Unknown"
+GSE50081.data$Sex = NULL
 
 # fetch feature data to get gene symbols
 feature.dat = gse$GSE50081_series_matrix.txt.gz@featureData@data 
@@ -157,6 +158,7 @@ write.csv(feature.df,
 write.csv(GSE50081.symbol, 
           "GSE50081_symbol.csv")
 
+GSE50081.data = GSE50081.merged[, c(1:9)]
 write.csv(GSE50081.data, 
           file = "GSE50081_data.csv")
 ```
